tests/fail/elaboration/unknown-field/unbound-head.fathom
//~ exit-code = 1

rec.foo.bar
